--- a/webapp/app/admin/bannerBoard.html
+++ b/webapp/app/admin/bannerBoard.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
     <script defer src="./../../assets/js/main/include.js"></script>
     <script defer src="./../../assets/js/admin/admin.js"></script>
+    <script defer src="./../../assets/js/modal/modalDeleteNews.js"></script>
+    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
   </head>
 
   <body>
@@ -43,73 +45,73 @@
             <div class="table_content">
               <div class="table">
                 <ul class="table_body">
-                  <li class="body_number"><a href="">1</a></li>
+                  <li class="body_number"><a href="./../../app/admin/bannerDetail.html">1</a></li>
                   <li class="body_content">
-                    <a href="">뉴스 제목</a>
+                    <a href="./../../app/admin/bannerDetail.html">뉴스 제목</a>
                   </li>
-                  <li class="body_date"><a href="">2025-08-09</a></li>
+                  <li class="body_date"><a href="./../../app/admin/bannerDetail.html">2025-08-09</a></li>
                   <li class="body_delete">
-                    <button class="delete_btn">삭제</button>
+                    <button class="delete_btn" onclick="modalDeleteNewsShow()">삭제</button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="">1</a></li>
+                  <li class="body_number"><a href="./../../app/admin/bannerDetail.html">1</a></li>
                   <li class="body_content">
-                    <a href="">뉴스 제목</a>
+                    <a href="./../../app/admin/bannerDetail.html">뉴스 제목</a>
                   </li>
-                  <li class="body_date"><a href="">2025-08-09</a></li>
+                  <li class="body_date"><a href="./../../app/admin/bannerDetail.html">2025-08-09</a></li>
                   <li class="body_delete">
-                    <button class="delete_btn">삭제</button>
+                    <button class="delete_btn" onclick="modalDeleteNewsShow()">삭제</button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="">1</a></li>
+                  <li class="body_number"><a href="./../../app/admin/bannerDetail.html">1</a></li>
                   <li class="body_content">
-                    <a href="">뉴스 제목</a>
+                    <a href="./../../app/admin/bannerDetail.html">뉴스 제목</a>
                   </li>
-                  <li class="body_date"><a href="">2025-08-09</a></li>
+                  <li class="body_date"><a href="./../../app/admin/bannerDetail.html">2025-08-09</a></li>
                   <li class="body_delete">
-                    <button class="delete_btn">삭제</button>
+                    <button class="delete_btn" onclick="modalDeleteNewsShow()">삭제</button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="">1</a></li>
+                  <li class="body_number"><a href="./../../app/admin/bannerDetail.html">1</a></li>
                   <li class="body_content">
-                    <a href="">뉴스 제목</a>
+                    <a href="./../../app/admin/bannerDetail.html">뉴스 제목</a>
                   </li>
-                  <li class="body_date"><a href="">2025-08-09</a></li>
+                  <li class="body_date"><a href="./../../app/admin/bannerDetail.html">2025-08-09</a></li>
                   <li class="body_delete">
-                    <button class="delete_btn">삭제</button>
+                    <button class="delete_btn" onclick="modalDeleteNewsShow()">삭제</button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="">1</a></li>
+                  <li class="body_number"><a href="./../../app/admin/bannerDetail.html">1</a></li>
                   <li class="body_content">
-                    <a href="">뉴스 제목</a>
+                    <a href="./../../app/admin/bannerDetail.html">뉴스 제목</a>
                   </li>
-                  <li class="body_date"><a href="">2025-08-09</a></li>
+                  <li class="body_date"><a href="./../../app/admin/bannerDetail.html">2025-08-09</a></li>
                   <li class="body_delete">
-                    <button class="delete_btn">삭제</button>
+                    <button class="delete_btn" onclick="modalDeleteNewsShow()">삭제</button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="">1</a></li>
+                  <li class="body_number"><a href="./../../app/admin/bannerDetail.html">1</a></li>
                   <li class="body_content">
-                    <a href="">뉴스 제목</a>
+                    <a href="./../../app/admin/bannerDetail.html">뉴스 제목</a>
                   </li>
-                  <li class="body_date"><a href="">2025-08-09</a></li>
+                  <li class="body_date"><a href="./../../app/admin/bannerDetail.html">2025-08-09</a></li>
                   <li class="body_delete">
-                    <button class="delete_btn">삭제</button>
+                    <button class="delete_btn" onclick="modalDeleteNewsShow()">삭제</button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="">1</a></li>
+                  <li class="body_number"><a href="./../../app/admin/bannerDetail.html">1</a></li>
                   <li class="body_content">
-                    <a href="">뉴스 제목</a>
+                    <a href="./../../app/admin/bannerDetail.html">뉴스 제목</a>
                   </li>
-                  <li class="body_date"><a href="">2025-08-09</a></li>
+                  <li class="body_date"><a href="./../../app/admin/bannerDetail.html">2025-08-09</a></li>
                   <li class="body_delete">
-                    <button class="delete_btn">삭제</button>
+                    <button class="delete_btn" onclick="modalDeleteNewsShow()">삭제</button>
                   </li>
                 </ul>
               </div>
@@ -117,27 +119,27 @@
             <div class="paging_box">
               <ul class="paging">
                 <li class="prev">
-                  <a href="">&lt;</a>
+                  <a href="#">&lt;</a>
                 </li>
                 <li class="page_number">
-                  <a href="">1</a>
+                  <a href="#">1</a>
                 </li>
                 <li class="page_number">
-                  <a href="">2</a>
+                  <a href="#">2</a>
                 </li>
                 <li class="page_number">
-                  <a href="">3</a>
+                  <a href="#">3</a>
                 </li>
                 <li class="page_number">
-                  <a href="">4</a>
+                  <a href="#">4</a>
                 </li>
                 <li class="page_number">...</li>
                 <li class="next">
-                  <a href="">&gt;</a>
+                  <a href="#">&gt;</a>
                 </li>
               </ul>
               <div class="add">
-                <a href="#" class="add_btn">등록</a>
+                <a href="./../../app/admin/bannerUpdate.html" class="add_btn">등록</a>
               </div>
             </div>
           </div>
@@ -146,5 +148,6 @@
     </main>
 
     <div id="footer"></div>
+    <div id="modalDeleteNews"></div>
   </body>
 </html>
