--- a/webapp/app/admin/careRequest.html
+++ b/webapp/app/admin/careRequest.html
@@ -46,46 +46,46 @@
             </div>
             <div class="table_content">
               <ul class="table_body">
-                <li class="body_number"><a href="">1</a></li>
-                <li class="body_name"><a href="">가나다</a></li>
-                <li class="body_id"><a href="">abc123</a></li>
-                <li class="body_date"><a href="">2025-08-09</a></li>
-                <li class="body_condition"><a href="">반려</a></li>
+                <li class="body_number"><a href="./../../app/admin/careRequestDetail.html">1</a></li>
+                <li class="body_name"><a href="./../../app/admin/careRequestDetail.html">가나다</a></li>
+                <li class="body_id"><a href="./../../app/admin/careRequestDetail.html">abc123</a></li>
+                <li class="body_date"><a href="./../../app/admin/careRequestDetail.html">2025-08-09</a></li>
+                <li class="body_condition"><a href="./../../app/admin/careRequestDetail.html">반려</a></li>
               </ul>
               <ul class="table_body">
-                <li class="body_number"><a href="">2</a></li>
-                <li class="body_name"><a href="">가나다</a></li>
-                <li class="body_id"><a href="">abc123</a></li>
-                <li class="body_date"><a href="">2025-08-09</a></li>
-                <li class="body_condition"><a href="">승인</a></li>
+                <li class="body_number"><a href="./../../app/admin/careRequestDetail.html">2</a></li>
+                <li class="body_name"><a href="./../../app/admin/careRequestDetail.html">가나다</a></li>
+                <li class="body_id"><a href="./../../app/admin/careRequestDetail.html">abc123</a></li>
+                <li class="body_date"><a href="./../../app/admin/careRequestDetail.html">2025-08-09</a></li>
+                <li class="body_condition"><a href="./../../app/admin/careRequestDetail.html">승인</a></li>
               </ul>
               <ul class="table_body">
-                <li class="body_number"><a href="">3</a></li>
-                <li class="body_name"><a href="">가나다</a></li>
-                <li class="body_id"><a href="">abc123</a></li>
-                <li class="body_date"><a href="">2025-08-09</a></li>
-                <li class="body_condition"><a href="">승인</a></li>
+                <li class="body_number"><a href="./../../app/admin/careRequestDetail.html">3</a></li>
+                <li class="body_name"><a href="./../../app/admin/careRequestDetail.html">가나다</a></li>
+                <li class="body_id"><a href="./../../app/admin/careRequestDetail.html">abc123</a></li>
+                <li class="body_date"><a href="./../../app/admin/careRequestDetail.html">2025-08-09</a></li>
+                <li class="body_condition"><a href="./../../app/admin/careRequestDetail.html">승인</a></li>
               </ul>
               <ul class="table_body">
-                <li class="body_number"><a href="">4</a></li>
-                <li class="body_name"><a href="">가나다</a></li>
-                <li class="body_id"><a href="">abc123</a></li>
-                <li class="body_date"><a href="">2025-08-09</a></li>
-                <li class="body_condition"><a href="">승인</a></li>
+                <li class="body_number"><a href="./../../app/admin/careRequestDetail.html">4</a></li>
+                <li class="body_name"><a href="./../../app/admin/careRequestDetail.html">가나다</a></li>
+                <li class="body_id"><a href="./../../app/admin/careRequestDetail.html">abc123</a></li>
+                <li class="body_date"><a href="./../../app/admin/careRequestDetail.html">2025-08-09</a></li>
+                <li class="body_condition"><a href="./../../app/admin/careRequestDetail.html">승인</a></li>
               </ul>
               <ul class="table_body">
-                <li class="body_number"><a href="">5</a></li>
-                <li class="body_name"><a href="">가나다</a></li>
-                <li class="body_id"><a href="">abc123</a></li>
-                <li class="body_date"><a href="">2025-08-09</a></li>
-                <li class="body_condition"><a href="">승인</a></li>
+                <li class="body_number"><a href="./../../app/admin/careRequestDetail.html">5</a></li>
+                <li class="body_name"><a href="./../../app/admin/careRequestDetail.html">가나다</a></li>
+                <li class="body_id"><a href="./../../app/admin/careRequestDetail.html">abc123</a></li>
+                <li class="body_date"><a href="./../../app/admin/careRequestDetail.html">2025-08-09</a></li>
+                <li class="body_condition"><a href="./../../app/admin/careRequestDetail.html">승인</a></li>
               </ul>
               <ul class="table_body">
-                <li class="body_number"><a href="">6</a></li>
-                <li class="body_name"><a href="">가나다</a></li>
-                <li class="body_id"><a href="">abc123</a></li>
-                <li class="body_date"><a href="">2025-08-09</a></li>
-                <li class="body_condition"><a href="">반려</a></li>
+                <li class="body_number"><a href="./../../app/admin/careRequestDetail.html">6</a></li>
+                <li class="body_name"><a href="./../../app/admin/careRequestDetail.html">가나다</a></li>
+                <li class="body_id"><a href="./../../app/admin/careRequestDetail.html">abc123</a></li>
+                <li class="body_date"><a href="./../../app/admin/careRequestDetail.html">2025-08-09</a></li>
+                <li class="body_condition"><a href="./../../app/admin/careRequestDetail.html">반려</a></li>
               </ul>
           </div>
         </div>
