--- a/webapp/app/admin/qeustion.html
+++ b/webapp/app/admin/qeustion.html
@@ -48,78 +48,78 @@
             </div>
             <div class="table_content">
               <ul class="table_body">
-                <li class="body_number"><a href="">1</a></li>
-                <li class="body_title"><a href="">오늘 날씨가 좋네요</a></li>
-                <li class="body_name"><a href="">김옥순</a></li>
-                <li class="body_id"><a href="">abc123</a></li>
-                <li class="body_date"><a href="">2025-08-09</a></li>
-                <li class="body_type"><a href="">Y</a></li>
+                <li class="body_number"><a href="./../../app/admin/questionDetail.html">1</a></li>
+                <li class="body_title"><a href="./../../app/admin/questionDetail.html">오늘 날씨가 좋네요</a></li>
+                <li class="body_name"><a href="./../../app/admin/questionDetail.html">김옥순</a></li>
+                <li class="body_id"><a href="./../../app/admin/questionDetail.html">abc123</a></li>
+                <li class="body_date"><a href="./../../app/admin/questionDetail.html">2025-08-09</a></li>
+                <li class="body_type"><a href="./../../app/admin/questionDetail.html">Y</a></li>
               </ul>
               <ul class="table_body">
-                <li class="body_number"><a href="">2</a></li>
+                <li class="body_number"><a href="./../../app/admin/questionDetail.html">2</a></li>
                 <li class="body_title">
-                  <a href="">정마담한테는 밑에서 한장</a>
+                  <a href="./../../app/admin/questionDetail.html">정마담한테는 밑에서 한장</a>
                 </li>
-                <li class="body_name"><a href="">고니</a></li>
-                <li class="body_id"><a href="">gstop</a></li>
-                <li class="body_date"><a href="">2025-08-09</a></li>
-                <li class="body_type"><a href="">N</a></li>
+                <li class="body_name"><a href="./../../app/admin/questionDetail.html">고니</a></li>
+                <li class="body_id"><a href="./../../app/admin/questionDetail.html">gstop</a></li>
+                <li class="body_date"><a href="./../../app/admin/questionDetail.html">2025-08-09</a></li>
+                <li class="body_type"><a href="./../../app/admin/questionDetail.html">N</a></li>
               </ul>
               <ul class="table_body">
-                <li class="body_number"><a href="">3</a></li>
+                <li class="body_number"><a href="./../../app/admin/questionDetail.html">3</a></li>
                 <li class="body_title">
-                  <a href="">거 죽기 딱 좋은 날씨네</a>
+                  <a href="./../../app/admin/questionDetail.html">거 죽기 딱 좋은 날씨네</a>
                 </li>
-                <li class="body_name"><a href="">준구</a></li>
-                <li class="body_id"><a href="">helpplz</a></li>
-                <li class="body_date"><a href="">2025-08-09</a></li>
-                <li class="body_type"><a href="">N</a></li>
+                <li class="body_name"><a href="./../../app/admin/questionDetail.html">준구</a></li>
+                <li class="body_id"><a href="./../../app/admin/questionDetail.html">helpplz</a></li>
+                <li class="body_date"><a href="./../../app/admin/questionDetail.html">2025-08-09</a></li>
+                <li class="body_type"><a href="./../../app/admin/questionDetail.html">N</a></li>
               </ul>
               <ul class="table_body">
-                <li class="body_number"><a href="">4</a></li>
-                <li class="body_title"><a href="">묻고 떠블로 가</a></li>
-                <li class="body_name"><a href="">곽철용</a></li>
-                <li class="body_id"><a href="">irondragon</a></li>
-                <li class="body_date"><a href="">2025-08-09</a></li>
-                <li class="body_type"><a href="">N</a></li>
+                <li class="body_number"><a href="./../../app/admin/questionDetail.html">4</a></li>
+                <li class="body_title"><a href="./../../app/admin/questionDetail.html">묻고 떠블로 가</a></li>
+                <li class="body_name"><a href="./../../app/admin/questionDetail.html">곽철용</a></li>
+                <li class="body_id"><a href="./../../app/admin/questionDetail.html">irondragon</a></li>
+                <li class="body_date"><a href="./../../app/admin/questionDetail.html">2025-08-09</a></li>
+                <li class="body_type"><a href="./../../app/admin/questionDetail.html">N</a></li>
               </ul>
               <ul class="table_body">
-                <li class="body_number"><a href="">5</a></li>
+                <li class="body_number"><a href="./../../app/admin/questionDetail.html">5</a></li>
                 <li class="body_title">
-                  <a href="">모히또 가서 몰디브 한잔</a>
+                  <a href="./../../app/admin/questionDetail.html">모히또 가서 몰디브 한잔</a>
                 </li>
-                <li class="body_name"><a href="">이병헌</a></li>
-                <li class="body_id"><a href="">twohands</a></li>
-                <li class="body_date"><a href="">2025-08-09</a></li>
-                <li class="body_type"><a href="">Y</a></li>
+                <li class="body_name"><a href="./../../app/admin/questionDetail.html">이병헌</a></li>
+                <li class="body_id"><a href="./../../app/admin/questionDetail.html">twohands</a></li>
+                <li class="body_date"><a href="./../../app/admin/questionDetail.html">2025-08-09</a></li>
+                <li class="body_type"><a href="./../../app/admin/questionDetail.html">Y</a></li>
               </ul>
               <ul class="table_body">
-                <li class="body_number"><a href="">6</a></li>
+                <li class="body_number"><a href="./../../app/admin/questionDetail.html">6</a></li>
                 <li class="body_title">
-                  <a href="">어찌 내가 왕이 될 상인가</a>
+                  <a href="./../../app/admin/questionDetail.html">어찌 내가 왕이 될 상인가</a>
                 </li>
-                <li class="body_name"><a href="">광해</a></li>
-                <li class="body_id"><a href="">slave02</a></li>
-                <li class="body_date"><a href="">2025-08-09</a></li>
-                <li class="body_type"><a href="">Y</a></li>
+                <li class="body_name"><a href="./../../app/admin/questionDetail.html">광해</a></li>
+                <li class="body_id"><a href="./../../app/admin/questionDetail.html">slave02</a></li>
+                <li class="body_date"><a href="./../../app/admin/questionDetail.html">2025-08-09</a></li>
+                <li class="body_type"><a href="./../../app/admin/questionDetail.html">Y</a></li>
               </ul>
               <ul class="table_body">
-                <li class="body_number"><a href="">7</a></li>
-                <li class="body_title"><a href="">어이가 없네</a></li>
-                <li class="body_name"><a href="">유아인</a></li>
-                <li class="body_id"><a href="">understandguy</a></li>
-                <li class="body_date"><a href="">2025-08-09</a></li>
-                <li class="body_type"><a href="">N</a></li>
+                <li class="body_number"><a href="./../../app/admin/questionDetail.html">7</a></li>
+                <li class="body_title"><a href="./../../app/admin/questionDetail.html">어이가 없네</a></li>
+                <li class="body_name"><a href="./../../app/admin/questionDetail.html">유아인</a></li>
+                <li class="body_id"><a href="./../../app/admin/questionDetail.html">understandguy</a></li>
+                <li class="body_date"><a href="./../../app/admin/questionDetail.html">2025-08-09</a></li>
+                <li class="body_type"><a href="./../../app/admin/questionDetail.html">N</a></li>
               </ul>
               <ul class="table_body">
-                <li class="body_number"><a href="">8</a></li>
+                <li class="body_number"><a href="./../../app/admin/questionDetail.html">8</a></li>
                 <li class="body_title">
-                  <a href="">납득이 안가잔아 납득이</a>
+                  <a href="./../../app/admin/questionDetail.html">납득이 안가잔아 납득이</a>
                 </li>
-                <li class="body_name"><a href="">납득이</a></li>
-                <li class="body_id"><a href="">bibibigo</a></li>
-                <li class="body_date"><a href="">2025-08-09</a></li>
-                <li class="body_type"><a href="">Y</a></li>
+                <li class="body_name"><a href="./../../app/admin/questionDetail.html">납득이</a></li>
+                <li class="body_id"><a href="./../../app/admin/questionDetail.html">bibibigo</a></li>
+                <li class="body_date"><a href="./../../app/admin/questionDetail.html">2025-08-09</a></li>
+                <li class="body_type"><a href="./../../app/admin/questionDetail.html">Y</a></li>
               </ul>
             </div>
           </div>
