--- a/webapp/app/admin/reportDetail.html
+++ b/webapp/app/admin/reportDetail.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="./../../assets/css/admin/reportDetail.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
     <script defer src="./../../assets/js/main/include.js"></script>
-    <script defer src="./../../assets/js/admin/admin.js"></script>
-    <script defer src="./../../assets/js/modal/modalDeletePostReason.js"></script>
+    <!-- <script defer src="./../../assets/js/admin/admin.js"></script> -->
+    <script defer src="./../../assets/js/modal/modalDeleteReportedPost.js"></script>
     <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
   </head>
   <body>
@@ -78,12 +78,13 @@
           </div>
         </div>
         <div class="notice_btn">
-          <button class="list">목록</button>
-          <button class="delete" onclick="modalDeletePostReasonShow()" type="button">삭제</button>
+          <button class="list" onclick="linkHref()">목록</button>
+          <button class="delete" onclick="modalDeleteReportedPostShow()" type="button">삭제</button>
         </div>
       </section>
     </main>
     <div id="footer"></div>
-    <div id="modalDeletePostReason"></div>
+    <div id="modalDeleteReportedPost"></div>
+
   </body>
 </html>
