--- a/webapp/app/admin/bannerDetail.html
+++ b/webapp/app/admin/bannerDetail.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="./../../assets/css/admin/bannerDetail.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
     <script defer src="./../../assets/js/main/include.js"></script>
-    <script defer src="./../../assets/js/admin/admin.js"></script>
+    <!-- <script defer src="./../../assets/js/admin/admin.js"></script> -->
+    <script defer src="./../../assets/js/modal/modalDeleteNewsFinished.js"></script>
+      <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
   </head>
   <body>
     <div id="header"></div>
@@ -37,11 +39,12 @@
           <input type="text" class="link_input" />
         </div>
         <div class="add_btn">
-          <button class="cancle">취소</button>
-          <button class="add">수정</button>
+          <button class="cancle" onclick="cancle2()" type="button">취소</button>
+          <button class="add" onclick="modalDeleteNewsFinishedShow()" type="button">수정</button>
         </div>
       </section>
     </main>
     <div id="footer"></div>
+    <div id="modalDeleteNewsFinished"></div>
   </body>
 </html>
