--- a/webapp/app/admin/newsBoadDetail.html
+++ b/webapp/app/admin/newsBoadDetail.html
@@ -14,7 +14,8 @@
     />
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
     <script defer src="./../../assets/js/main/include.js"></script>
-    <script defer src="./../../assets/js/admin/admin.js"></script>
+    <script defer src="./../../assets/js/modal/modalDeleteNewsFinished.js"></script>
+      <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
   </head>
   <body>
     <div id="header"></div>
@@ -39,11 +40,12 @@
           <input type="text" class="link_input" />
         </div>
         <div class="add_btn">
-          <button class="cancle">취소</button>
-          <button class="add">수정</button>
+          <button class="cancle" onclick="cancle()">취소</button>
+          <button class="add" onclick="modalDeleteNewsFinishedShow()">수정</button>
         </div>
       </section>
     </main>
     <div id="footer"></div>
+    <div id="modalDeleteNewsFinished"></div>
   </body>
 </html>
