--- a/webapp/app/admin/notice.html
+++ b/webapp/app/admin/notice.html
@@ -50,85 +50,85 @@
             <div class="table">
               <div class="table">
                 <ul class="table_body">
-                  <li class="body_number"><a href="">1</a></li>
+                  <li class="body_number"><a href="./../../app/admin/noticeDetail.html">1</a></li>
                   <li class="body_content">
-                    <a href="">사이트 이용시 주의 사항</a>
+                    <a href="./../../app/admin/noticeDetail.html">사이트 이용시 주의 사항</a>
                   </li>
-                  <li class="body_name"><a href="">방울청년</a></li>
-                  <li class="body_cnt"><a href="">47</a></li>
-                  <li class="body_date"><a href="">2025-08-09</a></li>
+                  <li class="body_name"><a href="./../../app/admin/noticeDetail.html">방울청년</a></li>
+                  <li class="body_cnt"><a href="./../../app/admin/noticeDetail.html">47</a></li>
+                  <li class="body_date"><a href="./../../app/admin/noticeDetail.html">2025-08-09</a></li>
                   <li class="body_delete">
                     <button class="delete_btn" onclick="modalDeleteNoticeShow()">삭제</button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="">2</a></li>
+                  <li class="body_number"><a href="./../../app/admin/noticeDetail.html">2</a></li>
                   <li class="body_content">
-                    <a href="">사이트 이용시 주의 사항</a>
+                    <a href="./../../app/admin/noticeDetail.html">사이트 이용시 주의 사항</a>
                   </li>
-                  <li class="body_name"><a href="">방울청년</a></li>
-                  <li class="body_cnt"><a href="">47</a></li>
-                  <li class="body_date"><a href="">2025-08-09</a></li>
+                  <li class="body_name"><a href="./../../app/admin/noticeDetail.html">방울청년</a></li>
+                  <li class="body_cnt"><a href="./../../app/admin/noticeDetail.html">47</a></li>
+                  <li class="body_date"><a href="./../../app/admin/noticeDetail.html">2025-08-09</a></li>
                   <li class="body_delete">
                     <button class="delete_btn" onclick="modalDeleteNoticeShow()">삭제</button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="">3</a></li>
+                  <li class="body_number"><a href="./../../app/admin/noticeDetail.html">3</a></li>
                   <li class="body_content">
-                    <a href="">사이트 이용시 주의 사항</a>
+                    <a href="./../../app/admin/noticeDetail.html">사이트 이용시 주의 사항</a>
                   </li>
-                  <li class="body_name"><a href="">방울청년</a></li>
-                  <li class="body_cnt"><a href="">47</a></li>
-                  <li class="body_date"><a href="">2025-08-09</a></li>
+                  <li class="body_name"><a href="./../../app/admin/noticeDetail.html">방울청년</a></li>
+                  <li class="body_cnt"><a href="./../../app/admin/noticeDetail.html">47</a></li>
+                  <li class="body_date"><a href="./../../app/admin/noticeDetail.html">2025-08-09</a></li>
                   <li class="body_delete">
                     <button class="delete_btn" onclick="modalDeleteNoticeShow()">삭제</button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="">4</a></li>
+                  <li class="body_number"><a href="./../../app/admin/noticeDetail.html">4</a></li>
                   <li class="body_content">
-                    <a href="">사이트 이용시 주의 사항</a>
+                    <a href="./../../app/admin/noticeDetail.html">사이트 이용시 주의 사항</a>
                   </li>
-                  <li class="body_name"><a href="">방울청년</a></li>
-                  <li class="body_cnt"><a href="">47</a></li>
-                  <li class="body_date"><a href="">2025-08-09</a></li>
+                  <li class="body_name"><a href="./../../app/admin/noticeDetail.html">방울청년</a></li>
+                  <li class="body_cnt"><a href="./../../app/admin/noticeDetail.html">47</a></li>
+                  <li class="body_date"><a href="./../../app/admin/noticeDetail.html">2025-08-09</a></li>
                   <li class="body_delete">
                     <button class="delete_btn" onclick="modalDeleteNoticeShow()">삭제</button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="">5</a></li>
+                  <li class="body_number"><a href="./../../app/admin/noticeDetail.html">5</a></li>
                   <li class="body_content">
-                    <a href="">사이트 이용시 주의 사항</a>
+                    <a href="./../../app/admin/noticeDetail.html">사이트 이용시 주의 사항</a>
                   </li>
-                  <li class="body_name"><a href="">방울청년</a></li>
-                  <li class="body_cnt"><a href="">47</a></li>
-                  <li class="body_date"><a href="">2025-08-09</a></li>
+                  <li class="body_name"><a href="./../../app/admin/noticeDetail.html">방울청년</a></li>
+                  <li class="body_cnt"><a href="./../../app/admin/noticeDetail.html">47</a></li>
+                  <li class="body_date"><a href="./../../app/admin/noticeDetail.html">2025-08-09</a></li>
                   <li class="body_delete">
                     <button class="delete_btn" onclick="modalDeleteNoticeShow()">삭제</button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="">6</a></li>
+                  <li class="body_number"><a href="./../../app/admin/noticeDetail.html">6</a></li>
                   <li class="body_content">
-                    <a href="">사이트 이용시 주의 사항</a>
+                    <a href="./../../app/admin/noticeDetail.html">사이트 이용시 주의 사항</a>
                   </li>
-                  <li class="body_name"><a href="">방울청년</a></li>
-                  <li class="body_cnt"><a href="">35</a></li>
-                  <li class="body_date"><a href="">2025-08-09</a></li>
+                  <li class="body_name"><a href="./../../app/admin/noticeDetail.html">방울청년</a></li>
+                  <li class="body_cnt"><a href="./../../app/admin/noticeDetail.html">35</a></li>
+                  <li class="body_date"><a href="./../../app/admin/noticeDetail.html">2025-08-09</a></li>
                   <li class="body_delete">
                     <button class="delete_btn" onclick="modalDeleteNoticeShow()">삭제</button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="">7</a></li>
+                  <li class="body_number"><a href="./../../app/admin/noticeDetail.html">7</a></li>
                   <li class="body_content">
-                    <a href="">사이트 이용시 주의 사항</a>
+                    <a href="./../../app/admin/noticeDetail.html">사이트 이용시 주의 사항</a>
                   </li>
-                  <li class="body_name"><a href="">방울청년</a></li>
-                  <li class="body_cnt"><a href="">47</a></li>
-                  <li class="body_date"><a href="">2025-08-09</a></li>
+                  <li class="body_name"><a href="./../../app/admin/noticeDetail.html">방울청년</a></li>
+                  <li class="body_cnt"><a href="./../../app/admin/noticeDetail.html">47</a></li>
+                  <li class="body_date"><a href="./../../app/admin/noticeDetail.html">2025-08-09</a></li>
                   <li class="body_delete">
                     <button class="delete_btn" onclick="modalDeleteNoticeShow()">삭제</button>
                   </li>
@@ -158,7 +158,7 @@
                 </li>
               </ul>
               <div class="add">
-                <a href="#" class="add_btn">등록</a>
+                <a href="./../../app/admin/noticeAdd.html" class="add_btn">등록</a>
               </div>
             </div>
           </div>
