--- a/webapp/app/admin/noticeDetail.html
+++ b/webapp/app/admin/noticeDetail.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
     <script defer src="./../../assets/js/main/include.js"></script>
     <script defer src="./../../assets/js/admin/admin.js"></script>
+    <script defer src="./../../assets/js/admin/admin.js"></script>
   </head>
   <body>
     <div id="header"></div>
@@ -70,7 +71,7 @@
           >
         </div>
         <div class="notice_btn">
-          <button class="list">목록</button>
+          <button class="list" onclick="cancle()">목록</button>
           <button class="update">수정</button>
         </div>
       </section>
