--- a/webapp/app/admin/questionDetail.html
+++ b/webapp/app/admin/questionDetail.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
     <script defer src="./../../assets/js/main/include.js"></script>
     <script defer src="./../../assets/js/admin/admin.js"></script>
+    <script defer src="./../../assets/js/modal/modalQuestionAnswered.js"></script>
+  <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
   </head>
   <body>
     <div id="header"></div>
@@ -42,11 +44,12 @@
           </div>
         </div>
         <div class="notice_btn">
-          <button class="list">목록</button>
-          <button class="delete">답변 달기</button>
+          <button class="list" onclick="cancle()">목록</button>
+          <button class="delete" onclick="modalQuestionAnsweredShow()">답변 달기</button>
         </div>
       </section>
     </main>
     <div id="footer"></div>
+    <div id="modalQuestionAnswered"></div>
   </body>
 </html>
