--- a/webapp/app/admin/questionDetailUpdate.html
+++ b/webapp/app/admin/questionDetailUpdate.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
     <script defer src="./../../assets/js/main/include.js"></script>
     <script defer src="./../../assets/js/admin/admin.js"></script>
+    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
   </head>
   <body>
     <div id="header"></div>
