--- a/webapp/app/admin/refundDetail.html
+++ b/webapp/app/admin/refundDetail.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="./../../assets/css/admin/refundDetail.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
     <script defer src="./../../assets/js/main/include.js"></script>
-    <script defer src="./../../assets/js/admin/admin.js"></script>
+    <!-- <script defer src="./../../assets/js/admin/admin.js"></script> -->
+    <script defer src="./../../assets/js/modal/modalRefundFinished.js"></script>
+    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
   </head>
   <body>
     <div id="header"></div>
@@ -39,12 +41,13 @@
             </div>
           </div>
           <div class="btn_area">
-            <button class="cancle">취소</button>
-            <button class="submit">환급 완료</button>
+            <button class="cancle" onclick="cancle()" type="button">취소</button>
+            <button class="submit" onclick="modalRefundFinishedShow()" type="button">환급 완료</button>
           </div>
         </form>
       </section>
     </main>
     <div id="footer"></div>
+    <div id="modalRefundFinished"></div>
   </body>
 </html>
