--- a/webapp/app/admin/report.html
+++ b/webapp/app/admin/report.html
@@ -33,44 +33,44 @@
             <div class="table">
               <div class="table_content">
                 <ul class="table_body">
-                  <li class="body_number"><a href="">1</a></li>
+                  <li class="body_number"><a href="./../../app/admin/reportDetail.html">1</a></li>
                   <li class="body_content">
-                    <a href="">사이트 이용시 주의 사항</a>
+                    <a href="./../../app/admin/reportDetail.html">사이트 이용시 주의 사항</a>
                   </li>
-                  <li class="body_date"><a href="">202 5-08-09</a></li>
-                  <li class="body_cnt"><a href="">47</a></li>
+                  <li class="body_date"><a href="./../../app/admin/reportDetail.html">202 5-08-09</a></li>
+                  <li class="body_cnt"><a href="./../../app/admin/reportDetail.html">47</a></li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="">1</a></li>
+                  <li class="body_number"><a href="./../../app/admin/reportDetail.html">1</a></li>
                   <li class="body_content">
-                    <a href="">사이트 이용시 주의 사항</a>
+                    <a href="./../../app/admin/reportDetail.html">사이트 이용시 주의 사항</a>
                   </li>
-                  <li class="body_date"><a href="">2025-08-09</a></li>
-                  <li class="body_cnt"><a href="">47</a></li>
+                  <li class="body_date"><a href="./../../app/admin/reportDetail.html">2025-08-09</a></li>
+                  <li class="body_cnt"><a href="./../../app/admin/reportDetail.html">47</a></li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="">1</a></li>
+                  <li class="body_number"><a href="./../../app/admin/reportDetail.html">1</a></li>
                   <li class="body_content">
-                    <a href="">사이트 이용시 주의 사항</a>
+                    <a href="./../../app/admin/reportDetail.html">사이트 이용시 주의 사항</a>
                   </li>
-                  <li class="body_date"><a href="">2025-08-09</a></li>
-                  <li class="body_cnt"><a href="">47</a></li>
+                  <li class="body_date"><a href="./../../app/admin/reportDetail.html">2025-08-09</a></li>
+                  <li class="body_cnt"><a href="./../../app/admin/reportDetail.html">47</a></li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="">1</a></li>
+                  <li class="body_number"><a href="./../../app/admin/reportDetail.html">1</a></li>
                   <li class="body_content">
-                    <a href="">사이트 이용시 주의 사항</a>
+                    <a href="./../../app/admin/reportDetail.html">사이트 이용시 주의 사항</a>
                   </li>
-                  <li class="body_date"><a href="">2025-08-09</a></li>
-                  <li class="body_cnt"><a href="">47</a></li>
+                  <li class="body_date"><a href="./../../app/admin/reportDetail.html">2025-08-09</a></li>
+                  <li class="body_cnt"><a href="./../../app/admin/reportDetail.html">47</a></li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="">1</a></li>
+                  <li class="body_number"><a href="./../../app/admin/reportDetail.html">1</a></li>
                   <li class="body_content">
-                    <a href="">사이트 이용시 주의 사항</a>
+                    <a href="./../../app/admin/reportDetail.html">사이트 이용시 주의 사항</a>
                   </li>
-                  <li class="body_date"><a href="">2025-08-09</a></li>
-                  <li class="body_cnt"><a href="">47</a></li>
+                  <li class="body_date"><a href="./../../app/admin/reportDetail.html">2025-08-09</a></li>
+                  <li class="body_cnt"><a href="./../../app/admin/reportDetail.html">47</a></li>
                 </ul>
               </div>
             </div>
