--- a/webapp/app/admin/refundDetail.html
+++ b/webapp/app/admin/refundDetail.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./../../assets/css/admin/refundDetail.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
     <script defer src="./../../assets/js/main/include.js"></script>
-    <!-- <script defer src="./../../assets/js/admin/admin.js"></script> -->
+    <script defer src="./../../assets/js/admin/admin.js"></script>
     <script defer src="./../../assets/js/modal/modalRefundFinished.js"></script>
     <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
   </head>
