250811 22:37 장성주 돌봄회원 수정중

--- a/webapp/app/myPageCare/careProfile.html
+++ b/webapp/app/myPageCare/careProfile.html
@@ -36,8 +36,7 @@
       <div class="main_container">
         <ul class="profile_section">
           <img src="./../../assets/img/myPageCare/peple.jpg" alt="사람사진">
-          <input type="file">파일 선택
-          <button>확인</button>
+          <input type="file">
         </ul>
 
         <form action="" method="get">
