250811 23:14 장성주 최종 수정 진행중

--- a/webapp/app/myPageCare/careExit.html
+++ b/webapp/app/myPageCare/careExit.html
@@ -89,7 +89,7 @@
         <div class="modal-content">
           <p>성공적으로 회원을 탈퇴 하셨습니다.</p>
           <div class="modal-buttons">
-            <button class="btn blue" onclick="closeModal('modalSuccess')">확인</button>
+            <a href="./../../main.html"><button class="btn blue" onclick="closeModal('modalSuccess')">확인</button></a>
           </div>
         </div>
       </div>
