--- a/webapp/app/myPageCare/carePost.html
+++ b/webapp/app/myPageCare/carePost.html
@@ -147,6 +147,15 @@
     </div>
   </div>
 
+  <div class="modal" id="chek_deleteModal">
+    <div class="modal_box">
+      <p>게시글이 삭제 되었습니다.</p>
+      <div class="modal_buttons">
+        <button id="check_confirmDelete">확인</button>
+      </div>
+    </div>
+  </div>
+
   <div class="modal" id="checkModal">
     <div class="modal_box">
       <p>삭제할 쪽지를 선택하세요</p>
