--- a/webapp/app/myPageCare/careReference.html
+++ b/webapp/app/myPageCare/careReference.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
   <link rel="stylesheet" href="./../../assets/css/myPageCare/careReference.css">
+  <script defer src="./../../assets/js/myPageCare/careReference.js"></script>
 </head>
 
 <body>
