--- a/webapp/app/admin/bannerDetail.html
+++ b/webapp/app/admin/bannerDetail.html
@@ -11,9 +11,12 @@
     <link rel="stylesheet" href="./../../assets/css/admin/bannerDetail.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
     <script defer src="./../../assets/js/main/include.js"></script>
-    <!-- <script defer src="./../../assets/js/admin/admin.js"></script> -->
-    <script defer src="./../../assets/js/modal/modalDeleteNewsFinished.js"></script>
-      <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
+    <!-- <script
+      defer
+      src="./../../assets/js/modal/modalDeleteNewsFinished.js"
+    ></script> -->
+    <script defer src="./../../assets/js/admin/bannerDetail.js"></script>
+    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css" />
   </head>
   <body>
     <div id="header"></div>
@@ -40,11 +43,13 @@
         </div>
         <div class="add_btn">
           <button class="cancle" onclick="cancle2()" type="button">취소</button>
-          <button class="add" onclick="modalDeleteNewsFinishedShow()" type="button">수정</button>
+          <button class="add" onclick="modalUpdateShow()" type="button">
+            수정
+          </button>
         </div>
       </section>
     </main>
     <div id="footer"></div>
-    <div id="modalDeleteNewsFinished"></div>
+    <div id="modalUpdate"></div>
   </body>
 </html>
