--- a/webapp/app/admin/newsBoadDetail.html
+++ b/webapp/app/admin/newsBoadDetail.html
@@ -14,8 +14,8 @@
     />
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
     <script defer src="./../../assets/js/main/include.js"></script>
-    <script defer src="./../../assets/js/modal/modalDeleteNewsFinished.js"></script>
-      <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
+    <script defer src="./../../assets/js/admin/newsBoardDetail.js"></script>
+    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css" />
   </head>
   <body>
     <div id="header"></div>
@@ -31,7 +31,7 @@
         </div>
         <div class="add_content">
           <div class="board_title">뉴스내용</div>
-          <textarea name="news" id="news" placeholder="" readonly>
+          <textarea name="news" id="news" placeholder="">
           뉴스내용은 이러합니다.</textarea
           >
         </div>
@@ -41,11 +41,11 @@
         </div>
         <div class="add_btn">
           <button class="cancle" onclick="cancle()">취소</button>
-          <button class="add" onclick="modalDeleteNewsFinishedShow()">수정</button>
+          <button class="add" onclick="modalUpdateShow()">수정</button>
         </div>
       </section>
     </main>
     <div id="footer"></div>
-    <div id="modalDeleteNewsFinished"></div>
+    <div id="modalUpdate"></div>
   </body>
 </html>
