--- a/webapp/app/admin/careCareerDetailUpdate.html
+++ b/webapp/app/admin/careCareerDetailUpdate.html
@@ -16,9 +16,11 @@
     <script defer src="./../../assets/js/main/include.js"></script>
     <script defer src="./../../assets/js/admin/admin.js"></script>
     <script defer src="./../../assets/js/admin/admin.js"></script>
-        <script defer src="./../../assets/js/modal/modalCareModifyFinished.js"></script>
-        <script defer src="./../../assets/js/modal/modalCareModifyReject.js"></script>
-    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
+    <script
+      defer
+      src="./../../assets/js/modal/modalCareModifyFinished.js"
+    ></script>
+    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css" />
   </head>
   <body>
     <div id="header"></div>
@@ -52,8 +54,20 @@
             </div>
           </div>
           <div class="btn_area">
-            <button class="cancle" onclick="modalCareModifyRejectShow()" type="button">반려 처리</button>
-            <button class="submit" onclick="modalCareModifyFinishedShow()" type="button">돌봄 회원 수정 신청 완료</button>
+            <button
+              class="cancle"
+              onclick="modalCareModifyRejectShow()"
+              type="button"
+            >
+              반려 처리
+            </button>
+            <button
+              class="submit"
+              onclick="modalCareModifyFinishedShow()"
+              type="button"
+            >
+              돌봄 회원 수정 신청 완료
+            </button>
           </div>
         </form>
       </section>
