--- a/webapp/app/myPageNormal/normalMark.html
+++ b/webapp/app/myPageNormal/normalMark.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,15 +9,16 @@
   <link rel="stylesheet" href="./../../assets/css/header.css">
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
-  <script defer src="./../../assets/js/myPageNormal/normalMark.js"></script>
+  <script defer src="./../../assets/js/myPageNormal/myNormalMark.js"></script>
 </head>
+
 <body>
   <div id="header"></div>
   <main>
     <nav class="main_sidebar">
       <ul>
         <li><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></li>
-        <li><a href="./normalPwCheck.html">개인정보 수정</a></li>
+        <li><a href="./normalModify.html">개인정보 수정</a></li>
         <li><a href="./normalMark.html">찜한 목록</a></li>
         <li><a href="./normalheart.html">하트 목록</a></li>
         <li><a href="./normalMatching.html">매칭 기록</a></li>
@@ -32,71 +34,26 @@
         <div class="title">찜한 목록</div>
         <nav class="mark_nav">
           <ul>
-            <li><input type="checkbox"></li>
-            <li class="name"><div>이름</div></li>
-            <li class="location"><div>위치</div></li>
-            <li class="phone"><div>전화번호</div></li>
-          </ul>
-        </nav>
-        <nav class="mark_list">
-          <ul>
-            <li><input type="checkbox"></li>
-            <li class="name">
+            <li><input onclick="toggleMarksAll()" id="checkbox_col" name="mark_check_col" type="checkbox"></li>
+            <li class="name_col">
               <div>이름</div>
             </li>
-            <li class="location">
-              <div><a href="./../restaurant/restaurantDetail.html">위치</a></div>
+            <li class="location_col">
+              <div>위치</div>
             </li>
-            <li class="phone">
+            <li class="phone_col">
               <div>전화번호</div>
             </li>
           </ul>
         </nav>
-        <nav class="mark_list">
-          <ul> 
-            <li><input type="checkbox"></li>
-            <li class="name">
-              <div>이름</div>
-            </li>
-            <li class="location">
-              <div><a href="./../restaurant/restaurantDetail.html">위치</a></div>
-            </li>
-            <li class="phone">
-              <div>전화번호</div>
-            </li>
-          </ul>
-        </nav>
-        <nav class="mark_list">
-          <ul>
-            <li><input type="checkbox"></li>
-            <li class="name">
-              <div>이름</div>
-            </li>
-            <li class="location">
-              <div><a href="./../restaurant/restaurantDetail.html">위치</a></div>
-            </li>
-            <li class="phone">
-              <div>전화번호</div>
-            </li>
-          </ul>
-        </nav>
-        <nav class="mark_list">
-          <ul>
-            <li><input type="checkbox"></li>
-            <li class="name">
-              <div>이름</div>
-            </li>
-            <li class="location">
-              <div><a href="./../restaurant/restaurantDetail.html">위치</a></div>
-            </li>
-            <li class="phone">
-              <div>전화번호</div>
-            </li>
-          </ul>
-        </nav>
-        
-        <nav class="page">
-          <ul>
+        <ul class="mark_list">
+          <li id="li_1"></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+        <div>
+          <ul class="page">
             <li><a href="">&lt;</a></li>
             <li><a href="">1</a></li>
             <li><a href="">2</a></li>
@@ -104,14 +61,15 @@
             <li><a href="">4</a></li>
             <li><a href="">&gt;</a></li>
           </ul>
-        </nav>
+        </div>
         <div class="div_delete">
-          <button>찜 삭제</button>  
+          <button type="button" onclick="delMarks()">찜 삭제</button>
         </div>
       </div>
     </form>
-  
+
   </main>
   <div id="footer"></div>
 </body>
+
 </html>
