--- a/webapp/app/myPageNormal/normalModify.html
+++ b/webapp/app/myPageNormal/normalModify.html
@@ -15,17 +15,17 @@
   <div id="header"></div>
   <main>
     <nav class="main_sidebar">
-      <img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#">
       <ul>
-        <a href="./normalPwCheck.html"><li>개인정보 수정</li></a>
-        <a href="./normalMark.html"><li>찜한 목록</li></a>
-        <a href="./normalheart.html"><li>하트 목록</li></a>
-        <a href="./normalMatching.html"><li>매칭 기록</li></a>
-        <a href="./normalsendMesseage.html"><li>쪽지함</li></a>
-        <a href="./normalPost.html"><li>게시글 관리</li></a>
-        <a href="./normalPoint.html"><li>포인트 충전</li></a>
-        <a href="./normalReference.html"><li>1 대 1 문의</li></a>
-        <a href="./normalQuit.html"><li>회원 탈퇴</li></a>
+        <li><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></li>
+        <li><a href="./normalPwCheck.html">개인정보 수정</a></li>
+        <li><a href="./normalMark.html">찜한 목록</a></li>
+        <li><a href="./normalheart.html">하트 목록</a></li>
+        <li><a href="./normalMatching.html">매칭 기록</a></li>
+        <li><a href="./normalsendMesseage.html">쪽지함</a></li>
+        <li><a href="./normalPost.html">게시글 관리</a></li>
+        <li><a href="./normalPoint.html">포인트 충전</a></li>
+        <li><a href="./normalReference.html">1 대 1 문의</a></li>
+        <li><a href="./normalQuit.html">회원 탈퇴</a></li>
       </ul>
     </nav>
 
@@ -109,25 +109,25 @@
   <div class="modal_address">
     <div class="modal-content">
       <p>주소 수정이 완료 되었습니다.</p>
-      <button id="saveConfirmBtn">확인</button>
+      <button onclick="openaddressModalClose()" id="saveConfirmBtn">확인</button>
     </div>
   </div>
   <div class="modal_phone">
     <div class="modal-content">
       <p>전화번호 수정이 완료 되었습니다.</p>
-      <button id="saveConfirmBtn">확인</button>
+      <button onclick="openphoneModalClose()" id="saveConfirmBtn">확인</button>
     </div>
   </div>
   <div class="modal_email">
     <div class="modal-content">
       <p>이메일 수정이 완료 되었습니다.</p>
-      <button id="saveConfirmBtn">확인</button>
+      <button onclick="openemailModalClose()" id="saveConfirmBtn">확인</button>
     </div>
   </div>
   <div class="modal_pw">
     <div class="modal-content">
       <p>비밀번호 수정이 완료 되었습니다.</p>
-      <button id="saveConfirmBtn">확인</button>
+      <button onclick="openpwModalClose()" id="saveConfirmBtn">확인</button>
     </div>
   </div> 
   <div class="modal_mail">
