--- a/webapp/app/myPageNormal/normalPost.html
+++ b/webapp/app/myPageNormal/normalPost.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./../../assets/css/header.css">
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
-  <script defer src="./../../assets/js/myPageNormal/normalPost.js"></script>
+  <!-- <script defer src="./../../assets/js/myPageNormal/normalPost.js"></script> -->
 </head>
 <body>
   <div id="header"></div>
