--- a/webapp/app/myPageCare/careMessage.html
+++ b/webapp/app/myPageCare/careMessage.html
@@ -33,13 +33,13 @@
       <div class="title">쪽지함</div>
       <nav class="div_choose">
         <ul>
-          <li>받은 쪽지</li>
+          <li class="send"><a href="./careMessage.html"><strong>받은 쪽지</strong></a></li>
           <li>|</li>
-          <li>보낸 쪽지</li>
+          <li class="reseive"><a href="./careMessageReturn.html">보낸 쪽지</a></li>
         </ul>
 
       </nav>
-      <nav class="mark_nav">   
+      <nav class="mark_nav">
         <ul>
           <li><input type="checkbox"></li>
           <li class="name">
@@ -164,23 +164,23 @@
   </div>
 
   <div class="modal_bg" id="sendMsgModal">
-  <div class="modal_box">
-    <div class="modal_read">
-      <span class="modal_title">쪽지 보내기</span>
-      <span class="modal_close" onclick="closeSendMsgModal()">&times;</span>
-    </div>
-    <div class="modal_info">
-      <div class="sender_info">
-        <span>받는 사람 : </span>스태고사우루스 | <span class="sender_id">stago</span>
+    <div class="modal_box">
+      <div class="modal_read">
+        <span class="modal_title">쪽지 보내기</span>
+        <span class="modal_close" onclick="closeSendMsgModal()">&times;</span>
       </div>
-      <textarea id="message_textarea" placeholder="내용을 입력하세요"></textarea>
-    </div>
-    <div class="modal_button">
-      <button class="btn_send">보내기</button>
-      <button class="btn_cancel">취소</button>
+      <div class="modal_info">
+        <div class="sender_info">
+          <span>받는 사람 : </span>스태고사우루스 | <span class="sender_id">stago</span>
+        </div>
+        <textarea id="message_textarea" placeholder="내용을 입력하세요"></textarea>
+      </div>
+      <div class="modal_button">
+        <button class="btn_send">보내기</button>
+        <button class="btn_cancel">취소</button>
+      </div>
     </div>
   </div>
-</div>
 
   <div class="modal_bg" id="sendSuccessModal">
     <div class="modal_box modal_send">
@@ -192,14 +192,14 @@
   </div>
 
   <div class="modal_bg" id="deleteMsgModal">
-  <div class="modal_box confirm_modal">
-    <p class="confirm_text">정말로 쪽지를 삭제하시겠습니까?</p>
-    <div class="confirm_buttons">
-      <button class="btn_confirm" onclick="confirmDelete()">확인</button>
-      <button class="btn_cancel" onclick="closeDeleteModal()">취소</button>
+    <div class="modal_box confirm_modal">
+      <p class="confirm_text">정말로 쪽지를 삭제하시겠습니까?</p>
+      <div class="confirm_buttons">
+        <button class="btn_confirm" onclick="confirmDelete()">확인</button>
+        <button class="btn_cancel" onclick="closeDeleteModal()">취소</button>
+      </div>
     </div>
   </div>
-</div>
 
   <div class="modal_bg" id="sendSuccessModal">
     <div class="modal_box modal_send">
@@ -208,23 +208,12 @@
         <button class="btn_confirm" onclick="closeSendModal()">확인</button>
       </div>
     </div>
-  </div> 
+  </div>
   <div class="modal_bg" id="sentMsgReadModal">
     <div class="modal_box read_modal">
       <div class="modal_header">
         <span class="modal_title">보낸 쪽지 읽기</span>
         <span class="modal_close" onclick="closeSentMsgModal()">&times;</span>
-      </div>
-      <div class="modal_info">
-        <div class="receiver_info">
-          <span>받는 사람 : </span>강버들 | <span class="receiver_id">kangbudle01</span>
-        </div>
-        <div class="message_content">
-          나 이대나온 남자야. 까불지마
-        </div>
-      </div>
-      <div class="modal_button">
-        <button class="btn_delete">삭제</button>
       </div>
     </div>
   </div>
